@@ -8,12 +8,12 @@
  * modify it under the terms of the GNU Lesser General Public
  * License as published by the Free Software Foundation; either
  * version 2.1 of the License, or (at your option) any later version.
- * 
+ *
  * This library is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  * Lesser General Public License for more details.
- * 
+ *
  * You should have received a copy of the GNU Lesser General Public
  * License along with this library; if not, write to the Free Software
  * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
@@ -44,15 +44,16 @@ import javax.swing.event.EventListenerList;
  * A class that represents the many type of actions that this framework supports.
  * <p>
  * The command invocation of this action may be delegated to another action or item state
- * listener. If there isn't an explicit binding then the command is forwarded to 
+ * listener. If there isn't an explicit binding then the command is forwarded to
  * the TargetManager.
  *
  * @author Mark Davidson
  * @author Karl Schaefer (serialization support)
  */
+@SuppressWarnings("serial")
 public class BoundAction extends AbstractActionExt {
     private static final Logger LOG = Logger.getLogger(BoundAction.class .getName());
-    
+
     // Holds the listeners
     private transient EventListenerList listeners;
 
@@ -89,7 +90,7 @@ public class BoundAction extends AbstractActionExt {
      * The callback string will be called to register the action callback.
      * Note the toggle property must be set if this is a state action before
      * this method is called.
-     * For example, 
+     * For example,
      * <pre>
      *     &lt;exec&gt;com.sun.foo.FubarHandler#handleBar&lt;/exec&gt;
      * </pre>
@@ -106,7 +107,7 @@ public class BoundAction extends AbstractActionExt {
 
                 // May throw a security exception in an Applet
                 // context.
-                Object obj = clz.newInstance();
+                Object obj = clz.getDeclaredConstructor().newInstance();
 
                 registerCallback(obj, elems[1]);
             } catch (Exception ex) {
@@ -139,9 +140,9 @@ public class BoundAction extends AbstractActionExt {
                                                                   handler, method));
         }
     }
-    
+
     /**
-     * The callback for the toggle/state changed action that invokes a method 
+     * The callback for the toggle/state changed action that invokes a method
      * with a boolean argument on a target.
      *
      * TODO: should reimplement this class as something that can be persistable.
@@ -153,10 +154,10 @@ public class BoundAction extends AbstractActionExt {
 
         public BooleanInvocationHandler(Object target, String methodName) {
             // Create the true and false statements.
-            falseStatement = new Statement(target, methodName, 
+            falseStatement = new Statement(target, methodName,
                                            new Object[] { Boolean.FALSE });
-            
-            trueStatement = new Statement(target, methodName, 
+
+            trueStatement = new Statement(target, methodName,
                                           new Object[] { Boolean.TRUE });
         }
 
@@ -181,7 +182,7 @@ public class BoundAction extends AbstractActionExt {
         if (listeners == null) {
             listeners = new EventListenerList();
         }
-        listeners.add(clz, listener);        
+        listeners.add(clz, listener);
     }
 
     private <T extends EventListener> void removeListener(Class<T> clz, T listener) {
@@ -271,14 +272,14 @@ public class BoundAction extends AbstractActionExt {
 
         if (listeners != null) {
             Object[] list = listeners.getListenerList();
-            
+
             for (int i = 1; i < list.length; i += 2) {
                 if (Proxy.isProxyClass(list[i].getClass())) {
                     InvocationHandler h = Proxy.getInvocationHandler(list[i]);
-                    
+
                     if (h instanceof EventHandler && ((EventHandler) h).getTarget() instanceof Serializable) {
                         EventHandler eh = (EventHandler) h;
-                        
+
                         s.writeObject("callback");
                         s.writeObject(eh.getTarget());
                         s.writeObject(eh.getAction());
@@ -286,7 +287,7 @@ public class BoundAction extends AbstractActionExt {
                 } else if (list[i] instanceof BooleanInvocationHandler) {
                     BooleanInvocationHandler bih = (BooleanInvocationHandler) list[i];
                     Object target = bih.trueStatement.getTarget();
-                    
+
                     if (target instanceof Serializable) {
                         s.writeObject(BooleanInvocationHandler.class.getName());
                         s.writeObject(target);
@@ -308,17 +309,17 @@ public class BoundAction extends AbstractActionExt {
         s.defaultReadObject();
 
         Object typeOrNull;
-        
+
         while (null != (typeOrNull = s.readObject())) {
             if ("callback".equals(typeOrNull)) {
                 Object handler = s.readObject();
                 String method = (String) s.readObject();
-                
+
                 addActionListener(EventHandler.create(ActionListener.class, handler, method));
             } else if (BooleanInvocationHandler.class.getName().equals(typeOrNull)) {
                 Object handler = s.readObject();
                 String method = (String) s.readObject();
-                
+
                 addItemListener(new BooleanInvocationHandler(handler, method));
             } else {
                 ClassLoader cl = Thread.currentThread().getContextClassLoader();
